2025-08-27T12:52:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17267257940 # 1186
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
* notice: last 14d: unq all: 9 27
* notice: prev accum: outdated-unq outdated-all / unq all: 1171 5811 / 1186 5838
* notice: next accum: outdated-unq outdated-all / unq all: 1171 5811 / 1187 5839
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-13 2025-08-27]

2025-08-27T01:59:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17255199983 # 1185
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
* notice: last 14d: unq all: 9 27
* notice: prev accum: outdated-unq outdated-all / unq all: 1171 5811 / 1185 5837
* notice: next accum: outdated-unq outdated-all / unq all: 1171 5811 / 1186 5838
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-26]

2025-08-26T12:56:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17238818678 # 1184
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-26
* notice: last 14d: unq all: 8 26
* notice: prev accum: outdated-unq outdated-all / unq all: 1170 5810 / 1185 5837
* notice: next accum: outdated-unq outdated-all / unq all: 1171 5811 / 1185 5837
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-12] / []

2025-08-26T02:02:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17225788455 # 1183