@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-27T12:52:44Z",
-  "count_outdated" : 5811,
-  "uniques_outdated" : 1171,
-  "count" : 5839,
-  "uniques" : 1187,
+  "timestamp" : "2025-08-28T01:58:23Z",
+  "count_outdated" : 5814,
+  "uniques_outdated" : 1174,
+  "count" : 5840,
+  "uniques" : 1188,
   "views" : [
-    {
-      "timestamp": "2025-08-13T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
     {
       "timestamp": "2025-08-14T00:00:00Z",
       "count": 1,
@@ -97,12 +88,12 @@
     },
     {
       "timestamp": "2025-08-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
