@@ -1,12 +1,7 @@
 {
-  "count": 27,
-  "uniques": 9,
+  "count": 26,
+  "uniques": 8,
   "views": [
-    {
-      "timestamp": "2025-08-13T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-08-14T00:00:00Z",
       "count": 1,
@@ -54,8 +49,8 @@
     },
     {
       "timestamp": "2025-08-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
