@@ -1,3 +1,12 @@
+2025-08-28T01:58:23Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17283542713 # 1187
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-28
+* notice: last 14d: unq all: 8 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 1171 5811 / 1187 5839
+* notice: next accum: outdated-unq outdated-all / unq all: 1174 5814 / 1188 5840
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-08-13] / [2025-08-27]
+
 2025-08-27T12:52:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17267257940 # 1186
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
